--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "socket-io": "^1.0.0"
+    "socket-io": "^1.0.0",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
